# src/ports/api/withdrawal/dtos/process-withdrawal.dto.ts
@@ -1,23 +1,4 @@
-import { IsString, IsNumber, IsNotEmpty, Min } from 'class-validator';
 import { BaseEntity } from 'src/business/common/base-entity';
-
-export class CreateWithdrawalDto extends BaseEntity {
-  @IsString()
-  @IsNotEmpty()
-  userId: string;
-
-  @IsString()
-  @IsNotEmpty()
-  accountId: string;
-
-  @IsString()
-  @IsNotEmpty()
-  bankAccountId: string;
-
-  @IsNumber()
-  @Min(0.01)
-  amount: number;
-}
 
 export class WithdrawalResponseDto extends BaseEntity {
   id: string;
